# simple-alsa-loop

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  loop.c
